# Qwen2.5-Omni

./: pyproject.toml
qwen-omni-utils/src/qwen_omni_utils/v2_5/: audio_process.py
